# Speech-To-Diagram

./: README.md
data/3224/: 3224.lm  3224.sent
data/6765/: 6765.dic  6765.lm  6765.log_pronounce  6765.sent  6765.vocab
data/current/: 3224.log_pronounce  3224.vocab  current.dic
data/new/: new.dic  new.lm  new.log_pronounce  new.sent  new.vocab
src/cmdprocessor/: CGstAudioConverter.cpp  CGstAudioConverter.hpp  CGstAudioResampler.cpp  CGstAudioResampler.hpp  CGstElement.cpp  CGstElement.hpp  CGstFakeSink.cpp  CGstFakeSink.hpp  CGstGoogleSpeech.cpp  CGstGoogleSpeech.hpp  CGstIterator.cpp  CGstIterator.hpp  CGstPad.cpp  CGstPad.hpp  CGstPipeline.cpp  CGstPipeline.hpp  CGstQueue.cpp  CGstQueue.hpp  CGstSource.cpp  CGstSource.hpp  CGstSpeechRecognizer.cpp  CGstSpeechRecognizer.cpp.autosave  CGstSpeechRecognizer.hpp  CGstTee.cpp  CGstTee.hpp  CGstValve.cpp  CGstValve.hpp  CGstVoiceActivityDetector.cpp  CGstVoiceActivityDetector.hpp  CGstWavenc.cpp  CGstWavenc.hpp  CMainLoop.cpp  CMainLoop.hpp  CMakeLists.txt  main.cpp
src/cmdprocessor/test/: execute.txt  siteinit.scm  test-text.txt  test.sh
src/gaphor/: gaphor_test.py
src/gstreamer/: Makefile.am  gstvader.c
src/gstreamer-plugin/: CMakeLists.txt  Makefile.am  googmarshal.c  googmarshal.h  gstgooglespeech.c  gstgooglespeech.h  gstpocketsphinx.c  gstpocketsphinx.h  gstvader.c  gstvader.h  psmarshal.c  psmarshal.h  psmarshal.list
src/gstreamer-plugin/phoneti/: CMakeLists.txt  Phonetisaurus.cpp  Phonetisaurus.hpp  cphonetisaurus.cpp  cphonetisaurus.h
src/phoneti-test/: CMakeLists.txt  main.c
src/phoneti-test/phoneti/: CMakeLists.txt  cphonetisaurus.cpp
src/sphinx/: CMakeLists.txt  config.h.template  main.c
src/sprec/: CMakeLists.txt  simple.c  tool.c
src/sprec/sprec/: CMakeLists.txt  flac_encoder.c  flac_encoder.h  recognize.c  recognize.h  sprec.h  wav.c  wav.h  web_client.c  web_client.h
src/sprec/sprec/jsonz/: CMakeLists.txt  jsonz.c  jsonz.h  object.c  object.h
tools/: english-utils.pl  mkvocab.pl  tocorpus.pl
